--- a/global.css
+++ b/global.css
@@ -43,20 +43,27 @@
     border: 1px solid #612d04;
 }
 
-#settingsHeader
+.settingsHeader
 {
+    background-image: url('https://raw.githubusercontent.com/blademarek/custom-script/main/assets/header.png');
     display: block;
     padding-top: 20px;
     letter-spacing: 2px;
 }
 
-#settingsContent
+.settingsContent
 {
     display: grid;
+    background-image: url('https://raw.githubusercontent.com/blademarek/custom-script/main/assets/body.png');
     margin-top: 20px;
     grid-template-columns: 50% 50%;
     grid-template-rows: 180px 130px 130px;
     width: 100%;
+}
+
+.settingsFooter
+{
+    background-image: url('https://raw.githubusercontent.com/blademarek/custom-script/main/assets/footer.png');
 }
 
 .settingsHeaderBig
