--- a/global.css
+++ b/global.css
@@ -10,6 +10,32 @@
     background-image: url('https://i.imgur.com/20OoeBD.png')
 }
 
+#infoWindow
+{
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 60%;
+    display: block;
+    transform: translate(-50%, -50%);
+    padding: 13px;
+    color: #58ffbb;
+    background-color: rgba(0, 0, 0, 0.86);
+    font-size: 20px;
+    border-radius: 20px;
+    border-left: 10px solid #58ffbb;
+    border-right: 10px solid #58ffbb;
+    margin-top: 30px;
+    z-index: 999;
+}
+
+#infoWindow span
+{
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
 #settingsWindow
 {
     position: absolute;
