--- a/global.css
+++ b/global.css
@@ -133,12 +133,11 @@
     align-items: center;
     justify-content: center;
     font-weight: 400;
-    margin: 0px 3px;
+    margin: 0 3px;
     border-radius: 5px;
     box-shadow: 0 0 0 1px #8e753f;
     font-size: 13px;
     background: #390301;
-    background: -moz-linear-gradient(top,#c3ab6f,#886933);
     background: linear-gradient(to bottom,#c3ab6f,#886933);
 }
 
@@ -183,7 +182,7 @@
     background-size: contain;
     height: 31px;
     width: 31px;
-    margin: 0px 2px;
+    margin: 0 2px;
 }
 
 .quest-type:hover {
